# llm_prompt_engineering

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
clients/: client.py
materials/: examples.json  fields.json  input.json
src/: CameLLM.py  LLaMA.py  LanguageModel.py  prompting.py  utils.py
test/: test_extract_fields.py  test_prompting.py
