[tool.poetry]
name = "product-extra"
version = "0.1.0"
description = "Test ML Software Engineer for Akeneo"
authors = ["Kosar Kazemi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.2"
requests = "2.31.0"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
